[tool.poetry]
name = "leetcode-python"
version = "0.1.0"
description = "Template generator for leetcode problems"
authors = ["ducduyn31 <ducduy.ababat@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

